website/websites/u64/code/revcomp.5.gpp.log

Sun, 27 Oct 2013 01:34:29 GMT

MAKE:
/usr/bin/g++ -c -pipe -O3 -fomit-frame-pointer -march=native  -fopenmp -mfpmath=sse -msse2 revcomp.gpp-5.c++ -o revcomp.gpp-5.c++.o &&  \
        /usr/bin/g++ revcomp.gpp-5.c++.o -o revcomp.gpp-5.gpp_run -fopenmp 
revcomp.gpp-5.c++: In function ‘void print_reverse(const string&, Out&)’:
revcomp.gpp-5.c++:44:16: error: ‘rend’ does not name a type
     auto const rend = sequence.rend();
                ^
revcomp.gpp-5.c++:46:15: error: ‘i’ does not name a type
     for (auto i = sequence.rbegin(); i != rend; ++i)
               ^
revcomp.gpp-5.c++:46:38: error: expected ‘;’ before ‘i’
     for (auto i = sequence.rbegin(); i != rend; ++i)
                                      ^
revcomp.gpp-5.c++:46:38: error: ‘i’ was not declared in this scope
revcomp.gpp-5.c++:46:43: error: ‘rend’ was not declared in this scope
     for (auto i = sequence.rbegin(); i != rend; ++i)
                                           ^
revcomp.gpp-5.c++: In function ‘int main()’:
revcomp.gpp-5.c++:62:18: error: ‘nullptr’ was not declared in this scope
     std::cin.tie(nullptr);
                  ^
revcomp.gpp-5.c++:65:10: error: ‘out’ does not name a type
     auto out = std::ostreambuf_iterator<char>(std::cout);
          ^
revcomp.gpp-5.c++:74:28: error: ISO C++ forbids declaration of ‘c’ with no type [-fpermissive]
                 for (auto& c : sequence)
                            ^
revcomp.gpp-5.c++:74:32: error: range-based ‘for’ loops are not allowed in C++98 mode
                 for (auto& c : sequence)
                                ^
revcomp.gpp-5.c++:76:41: error: ‘out’ was not declared in this scope
                 print_reverse(sequence, out);
                                         ^
revcomp.gpp-5.c++:92:20: error: ISO C++ forbids declaration of ‘c’ with no type [-fpermissive]
         for (auto& c : sequence)
                    ^
revcomp.gpp-5.c++:92:24: error: range-based ‘for’ loops are not allowed in C++98 mode
         for (auto& c : sequence)
                        ^
revcomp.gpp-5.c++:94:33: error: ‘out’ was not declared in this scope
         print_reverse(sequence, out);
                                 ^
make: [revcomp.gpp-5.gpp_run] Error 1 (ignored)
rm revcomp.gpp-5.c++
0.43s to complete and log all make actions

COMMAND LINE:
./revcomp.gpp-5.gpp_run 0 < revcomp-input250000.txt

MAKE ERROR 

